@@ -145,7 +145,9 @@ purge
     Only 'svn' packages can be purged, because other repositories may contain
     unrecoverable files even when not marked as 'dirty'.
     Options:
-      -h, --help  show this help message and exit
+      -h, --help     show this help message and exit
+      -n, --dry-run  Don't actually remove anything, just print the paths which
+                     would be removed.
     
 
 rebuild (rb)
